Fix text stretch

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -333,11 +333,11 @@ table,th,td,th {
 
 .grid-container {
   width: 100%;
-  height: 100%;
+  height: 100vh;
   display: grid;
   gap: 2em 2em;
   grid-template-columns: 1fr 1.1fr 1.1fr 1.1fr;
-  grid-template-rows: 0.3fr 2.3fr 0.4fr;
+  grid-template-rows: 0.3fr minmax(0, 2.3fr) 0.4fr;
   grid-template-areas:
     "photo_title photo_title photo_title photo_title"
     "photo_main photo_main photo_main photo_info"
@@ -361,13 +361,14 @@ table,th,td,th {
   grid-area: photo_mail;
   text-align:center;
   /*margin: auto;  */
-  margin: auto;
-  position: relative;
+  /*margin: auto;*/
 }
 
 .photo_info { 
   grid-area: photo_info;
   font-size: 24px;
+  overflow: scroll;
+
   /*text-align:center;*/
   /*margin: auto;  */
 }
